@@ -16,10 +16,11 @@
 package com.thoughtworks.go.plugin.access.configrepo;
 
 import com.bazaarvoice.jolt.JsonUtils;
-import org.apache.commons.io.IOUtils;
 
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.Map;
+import java.util.Objects;
 
 import static com.bazaarvoice.jolt.utils.JoltUtils.remove;
 import static com.bazaarvoice.jolt.utils.JoltUtils.store;
@@ -41,8 +42,8 @@ class ConfigRepoDocumentMother {
     }
 
     private Map<String, Object> getJSONFor(String fileName) {
-        try {
-            String transformJSON = IOUtils.toString(this.getClass().getResource(fileName), StandardCharsets.UTF_8);
+        try (InputStream is = Objects.requireNonNull(this.getClass().getResourceAsStream(fileName))) {
+            String transformJSON = new String(is.readAllBytes(), StandardCharsets.UTF_8);
             return JsonUtils.jsonToMap(transformJSON);
         } catch (Exception e) {
             throw new RuntimeException(e);
